--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
 <html lang="{{ language_code }}">
 <head>
     <meta charset="UTF-8">
-    <title>Polls - {% block title %}Eve{% endblock %}</title>
+    <title>{% exp 'django_project' %} - {% block title %}Base{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     {% if language_code == 'fa-ir' %}
@@ -30,10 +30,10 @@
     <div class="collapse navbar-collapse" id="navbar-menu">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a id="login" class="nav-link" href="#">{% exp 'login' %}</a>
+                <a id="login" class="nav-link" href="{% url 'users:login' %}">{% exp 'login' %}</a>
             </li>
             <li class="nav-item">
-                <a id="register" class="nav-link" href="#">{% exp 'register' %}</a>
+                <a id="register" class="nav-link" href="{% url 'users:register' %}">{% exp 'register' %}</a>
             </li>
             <li class="nav-item active">
                 <a id="homepage" class="nav-link" href="{% url 'pages:home' %}">{% exp 'home' %}</a>
@@ -44,6 +44,6 @@
 {% if message %}
     <div class="alert alert-primary" role="alert">{{ message }}</div>
 {% endif %}
-<div class="container">{% block content %}{% endblock %}</div>
+{% block content %}{% endblock %}
 </body>
 </html>
