Added title to homepage and registration page

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load main_extras %}
 
+{% block title %}{% exp 'home' %}{% endblock %}
+
 {% block content %}
     <h1>{% exp 'home_page_content' %}</h1>
 {% endblock %}
