--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load main_extras %}
 
+{% block title %}{% exp 'register' %}{% endblock %}
+
 {% block content %}
     <div class="row justify-content-center">
         <div class="col-md-6 p-5 mt-3 card">
