Added contact us form

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,8 +35,11 @@
             <li class="nav-item">
                 <a id="register" class="nav-link" href="{% url 'users:register' %}">{% exp 'register' %}</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a id="homepage" class="nav-link" href="{% url 'pages:home' %}">{% exp 'home' %}</a>
+            </li>
+            <li class="nav-item">
+                <a id="contact-us" class="nav-link" href="{% url 'pages:contact_us' %}">{% exp 'contact_us' %}</a>
             </li>
         </ul>
     </div>
