--- a/templates/base.html
+++ b/templates/base.html
@@ -29,12 +29,18 @@
     </button>
     <div class="collapse navbar-collapse" id="navbar-menu">
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a id="login" class="nav-link" href="{% url 'users:login' %}">{% exp 'login' %}</a>
-            </li>
-            <li class="nav-item">
-                <a id="register" class="nav-link" href="{% url 'users:register' %}">{% exp 'register' %}</a>
-            </li>
+            {% if request.user.is_authenticated %}
+                <li class="nav-item">
+                    <a id="logout" class="nav-link" href="{% url 'users:logout' %}">{% exp 'logout' %}</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a id="login" class="nav-link" href="{% url 'users:login' %}">{% exp 'login' %}</a>
+                </li>
+                <li class="nav-item">
+                    <a id="register" class="nav-link" href="{% url 'users:register' %}">{% exp 'register' %}</a>
+                </li>
+            {% endif %}
             <li class="nav-item">
                 <a id="homepage" class="nav-link" href="{% url 'pages:home' %}">{% exp 'home' %}</a>
             </li>
