--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -4,5 +4,9 @@
 {% block title %}{% exp 'home' %}{% endblock %}
 
 {% block content %}
-    <h1>{% exp 'home_page_content' %}</h1>
+    <div class="row justify-content-center">
+        <div class="col-md-6 p-5 mt-3 card">
+            <h1>{% exp 'home_page_content' %}</h1>
+        </div>
+    </div>
 {% endblock %}
