--- a/templates/pages/contact_us_success.html
+++ b/templates/pages/contact_us_success.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load main_extras %}
 
-{% block title %}{% exp 'contact_us' %}{% endblock %}
+{% block title %}{% exp 'contact_us_success' %}{% endblock %}
 
 {% block content %}
     <div class="row justify-content-center">
