--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,9 @@
         <ul class="navbar-nav">
             {% if request.user.is_authenticated %}
                 <li class="nav-item">
+                    <a id="panel" class="nav-link" href="{% url 'panel:home' %}">{% exp 'panel' %}</a>
+                </li>
+                <li class="nav-item">
                     <a id="profile" class="nav-link" href="{% url 'users:profile' %}">{% exp 'profile' %}</a>
                 </li>
                 <li class="nav-item">
