--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -6,6 +6,7 @@ body {
     background-color: #434343;
     color: white;
     overflow-x: hidden;
+    padding-top: 50px;
 }
 
 a {
@@ -22,6 +23,14 @@ ul {
     list-style-type: none;
 }
 
+.navbar {
+    position: fixed;
+    width: 100%;
+    z-index: 1999;
+    top: 0;
+    height: 50px;
+}
+
 .card {
     background-color: rgba(0, 0, 0, 0.6);
     -webkit-backdrop-filter: blur(10px);
@@ -33,7 +42,7 @@ ul {
 
 /* Django forms */
 .errorlist {
-    color: #ffc107!important;
+    color: #ffc107 !important;
 }
 
 .django-form label {
