--- a/templates/base.html
+++ b/templates/base.html
@@ -22,41 +22,43 @@
     {% endif %}
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-    <a class="navbar-brand" href="#">{% exp 'django_project' %}</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu"
-            aria-controls="navbar-menu" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbar-menu">
-        <ul class="navbar-nav">
-            {% if request.user.is_authenticated %}
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
+        <a class="navbar-brand" href="#">{% exp 'django_project' %}</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu"
+                aria-controls="navbar-menu" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar-menu">
+            <ul class="navbar-nav">
+                {% if request.user.is_authenticated %}
+                    <li class="nav-item">
+                        <a id="panel" class="nav-link" href="{% url 'panel:home' %}">{% exp 'panel' %}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a id="profile" class="nav-link" href="{% url 'users:profile' %}">{% exp 'profile' %}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a id="logout" class="nav-link" href="{% url 'users:logout' %}">{% exp 'logout' %}</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a id="login" class="nav-link" href="{% url 'users:login' %}">{% exp 'login' %}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a id="register" class="nav-link" href="{% url 'users:register' %}">{% exp 'register' %}</a>
+                    </li>
+                {% endif %}
                 <li class="nav-item">
-                    <a id="panel" class="nav-link" href="{% url 'panel:home' %}">{% exp 'panel' %}</a>
+                    <a id="homepage" class="nav-link" href="{% url 'pages:home' %}">{% exp 'home' %}</a>
                 </li>
                 <li class="nav-item">
-                    <a id="profile" class="nav-link" href="{% url 'users:profile' %}">{% exp 'profile' %}</a>
+                    <a id="contact-us" class="nav-link" href="{% url 'pages:contact_us' %}">{% exp 'contact_us' %}</a>
                 </li>
-                <li class="nav-item">
-                    <a id="logout" class="nav-link" href="{% url 'users:logout' %}">{% exp 'logout' %}</a>
-                </li>
-            {% else %}
-                <li class="nav-item">
-                    <a id="login" class="nav-link" href="{% url 'users:login' %}">{% exp 'login' %}</a>
-                </li>
-                <li class="nav-item">
-                    <a id="register" class="nav-link" href="{% url 'users:register' %}">{% exp 'register' %}</a>
-                </li>
-            {% endif %}
-            <li class="nav-item">
-                <a id="homepage" class="nav-link" href="{% url 'pages:home' %}">{% exp 'home' %}</a>
-            </li>
-            <li class="nav-item">
-                <a id="contact-us" class="nav-link" href="{% url 'pages:contact_us' %}">{% exp 'contact_us' %}</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+            </ul>
+        </div>
+    </nav>
+</header>
 {% if message %}
     <div class="alert alert-primary" role="alert">{{ message }}</div>
 {% endif %}
