--- a/templates/panel/base.html
+++ b/templates/panel/base.html
@@ -3,7 +3,7 @@
 {% load main_extras %}
 
 {% block styles %}
-        <link rel="stylesheet" href="{% static 'styles/panel/base.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/panel/base.css' %}">
 {% endblock %}
 
 {% block title %}{% exp 'panel' %}{% endblock %}
@@ -13,7 +13,11 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li><a id="courses" href="{% url 'courses:list' %}">{% exp 'panel_menu.list_courses' %}</a></li>
-                <li><a id="make_new_course" href="{% url 'courses:new' %}">{% exp 'panel_menu.new_course' %}</a></li>
+                {% if request.user.is_superuser %}
+                    <li>
+                        <a id="make_new_course" href="{% url 'courses:new' %}">{% exp 'panel_menu.new_course' %}</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
         <div id="page-content-wrapper">
