--- a/templates/panel/base.html
+++ b/templates/panel/base.html
@@ -22,7 +22,7 @@
         </div>
         <div id="page-content-wrapper">
             <div class="container-fluid">
-                {% block panel_content %}{% endblock %}
+                {% block panel_content %}{% exp 'panel.welcome' %}{% endblock %}
             </div>
         </div>
     </div>
