--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -41,6 +41,10 @@ ul {
 
 
 /* Django forms */
+.django-form br, .django-form .helptext {
+    display: none;
+}
+
 .errorlist {
     color: #ffc107 !important;
 }
