Added gender and bio to profile view

--- a/src/templates/users/profile.html
+++ b/src/templates/users/profile.html
@@ -7,12 +7,16 @@
     <div class="row justify-content-center">
         <div class="col-md-6 p-5 mt-3 card">
             <h1 class="align-self-center">{% exp 'profile' %}</h1>
-            <h6 class="text-secondary mt-4">{% exp 'profile.first_name' %}</h6>
+            <h6 class="text-secondary mt-4">{% exp 'user.first_name' %}</h6>
             <span id="text_first_name">{{ request.user.first_name }}</span>
-            <h6 class="text-secondary mt-4">{% exp 'profile.last_name' %}</h6>
+            <h6 class="text-secondary mt-4">{% exp 'user.last_name' %}</h6>
             <span id="text_last_name">{{ request.user.last_name }}</span>
-            <h6 class="text-secondary mt-4">{% exp 'profile.username' %}</h6>
-            <span id="text_user_name">{{ request.user.username }}</span>
+            <h6 class="text-secondary mt-4">{% exp 'user.username' %}</h6>
+            <span id="text_username">{{ request.user.username }}</span>
+            <h6 class="text-secondary mt-4">{% exp 'user.gender' %}</h6>
+            <span id="text_gender">{{ request.user.get_gender_display }}</span>
+            <h6 class="text-secondary mt-4">{% exp 'user.bio' %}</h6>
+            <span id="text_bio">{{ request.user.bio }}</span>
             <a class="btn btn-primary mt-5" id="setting" href="{% url 'users:setting' %}">{% exp 'edit_profile' %}</a>
         </div>
     </div>
