--- a/src/templates/users/setting.html
+++ b/src/templates/users/setting.html
@@ -7,7 +7,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6 p-5 mt-3 card">
             <h1 class="align-self-center">{% exp 'edit_profile' %}</h1>
-            <form method="post" class="django-form">
+            <form class="django-form" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form.as_table }}
                 <input type="submit" class="btn btn-primary form-control" value="{% exp 'edit_profile' %}">
