Added type field to user

--- a/src/templates/users/profile.html
+++ b/src/templates/users/profile.html
@@ -10,21 +10,25 @@
             <h1 class="align-self-center">{% exp 'profile' %}</h1>
             <div class="user-image align-self-center" style="background-image: url('{{ request.user.image.url }}');"></div>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-2">
                     <h6 class="text-secondary mt-4">{% exp 'user.first_name' %}</h6>
                     <span id="text_first_name">{{ request.user.first_name }}</span>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-2">
                     <h6 class="text-secondary mt-4">{% exp 'user.last_name' %}</h6>
                     <span id="text_last_name">{{ request.user.last_name }}</span>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-2">
                     <h6 class="text-secondary mt-4">{% exp 'user.username' %}</h6>
                     <span id="text_username">{{ request.user.username }}</span>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-2">
                     <h6 class="text-secondary mt-4">{% exp 'user.gender' %}</h6>
                     <span id="text_gender">{{ request.user.get_gender_display }}</span>
+                </div>
+                <div class="col-md-2">
+                    <h6 class="text-secondary mt-4">{% exp 'user.type' %}</h6>
+                    <span id="text_type">{{ request.user.get_type_display }}</span>
                 </div>
                 <h6 class="text-secondary mt-4">{% exp 'user.bio' %}</h6>
                 <article id="text_bio" class="markdown">{{ request.user.bio|markdownify }}</article>
