--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -25,10 +25,9 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
         <a class="navbar-brand" href="#">{% exp 'django_project' %}</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu"
-                aria-controls="navbar-menu" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <form action="{% url 'users:teacher_list' %}">
+            <input class="form-control" type="text" placeholder="{% exp 'search' %}" name="q" value="{{ request.GET.q }}">
+        </form>
         <div class="collapse navbar-collapse" id="navbar-menu">
             <ul class="navbar-nav">
                 {% if request.user.is_authenticated %}
@@ -36,7 +35,7 @@
                         <a id="panel" class="nav-link" href="{% url 'panel:home' %}">{% exp 'panel' %}</a>
                     </li>
                     <li class="nav-item">
-                        <a id="profile" class="nav-link" href="{% url 'users:profile' %}">{% exp 'profile' %}</a>
+                        <a id="profile" class="nav-link" href="{% url 'users:profile' request.user.username %}">{% exp 'profile' %}</a>
                     </li>
                     <li class="nav-item">
                         <a id="logout" class="nav-link" href="{% url 'users:logout' %}">{% exp 'logout' %}</a>
