--- a/src/templates/users/profile.html
+++ b/src/templates/users/profile.html
@@ -2,38 +2,40 @@
 {% load main_extras %}
 {% load markdownify %}
 
-{% block title %}{% exp 'profile' %}{% endblock %}
+{% block title %}{% exp 'profile' %} {{ user.username }}{% endblock %}
 
 {% block content %}
     <div class="row justify-content-center">
         <div class="col-md-6 p-5 mt-3 card">
             <h1 class="align-self-center">{% exp 'profile' %}</h1>
-            <div class="user-image align-self-center" style="background-image: url('{{ request.user.image.url }}');"></div>
+            <div class="user-image align-self-center" style="background-image: url('{{ user.image.url }}');"></div>
             <div class="row">
                 <div class="col-md-2">
                     <h6 class="text-secondary mt-4">{% exp 'user.first_name' %}</h6>
-                    <span id="text_first_name">{{ request.user.first_name }}</span>
+                    <span id="text_first_name">{{ user.first_name }}</span>
                 </div>
                 <div class="col-md-2">
                     <h6 class="text-secondary mt-4">{% exp 'user.last_name' %}</h6>
-                    <span id="text_last_name">{{ request.user.last_name }}</span>
+                    <span id="text_last_name">{{ user.last_name }}</span>
                 </div>
                 <div class="col-md-2">
                     <h6 class="text-secondary mt-4">{% exp 'user.username' %}</h6>
-                    <span id="text_username">{{ request.user.username }}</span>
+                    <span id="text_username">{{ user.username }}</span>
                 </div>
                 <div class="col-md-2">
                     <h6 class="text-secondary mt-4">{% exp 'user.gender' %}</h6>
-                    <span id="text_gender">{{ request.user.get_gender_display }}</span>
+                    <span id="text_gender">{{ user.get_gender_display }}</span>
                 </div>
                 <div class="col-md-2">
                     <h6 class="text-secondary mt-4">{% exp 'user.type' %}</h6>
-                    <span id="text_type">{{ request.user.get_type_display }}</span>
+                    <span id="text_type">{{ user.get_type_display }}</span>
                 </div>
                 <h6 class="text-secondary mt-4">{% exp 'user.bio' %}</h6>
-                <article id="text_bio" class="markdown">{{ request.user.bio|markdownify }}</article>
+                <article id="text_bio" class="markdown">{{ user.bio|markdownify }}</article>
             </div>
-            <a class="btn btn-primary mt-5" id="setting" href="{% url 'users:setting' %}">{% exp 'edit_profile' %}</a>
+            {% if request.user == user %}
+                <a class="btn btn-primary mt-5" id="setting" href="{% url 'users:setting' %}">{% exp 'edit_profile' %}</a>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
