--- a/src/templates/courses/list.html
+++ b/src/templates/courses/list.html
@@ -17,15 +17,15 @@
                 {% for course in course_list %}
                     <div class="{{ course.course_number }}_{{ course.group_number }} course-card mt-5 p-3">
                         <h4 class="mb-3">{{ course.name }}</h4>
-                        <div class="course-data badge alert-secondary">{{ course.department }}</div>
-                        <div class="course-data badge alert-secondary">
+                        <div class="badge alert-secondary">{{ course.department }}</div>
+                        <div class="badge alert-secondary">
                             {{ course.get_first_day_display }}
                             {% if course.second_day is not None %}
                                 {% exp 'generic.and' %} {{ course.get_second_day_display }}
                             {% endif %}
                         </div>
-                        <div class="course-data badge alert-secondary">{{ course.start_time }} {% exp 'generic.time_range_sep' %} {{ course.end_time }}</div>
-                        <div class="course-data badge alert-secondary">{{ course.teacher }}</div>
+                        <div class="badge alert-secondary">{{ course.start_time }} {% exp 'generic.time_range_sep' %} {{ course.end_time }}</div>
+                        <div class="badge alert-secondary">{{ course.teacher }}</div>
                         <br>
                         {% if request.user.is_superuser %}
                             <div id="actions" class=" mt-4">
