--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -26,19 +26,37 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
         <a class="navbar-brand" href="#">{% exp 'django_project' %}</a>
         <form action="{% url 'users:teacher_list' %}">
-            <input class="form-control" type="text" placeholder="{% exp 'search' %}" name="q" value="{{ request.GET.q }}">
+            <input class="form-control" type="text" placeholder="{% exp 'search' %}" name="q"
+                   value="{{ request.GET.q }}">
         </form>
         <div class="collapse navbar-collapse" id="navbar-menu">
             <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a id="homepage" class="nav-link" href="{% url 'pages:home' %}">{% exp 'home' %}</a>
+                </li>
+                <li class="nav-item">
+                    <a id="contact-us" class="nav-link" href="{% url 'pages:contact_us' %}">{% exp 'contact_us' %}</a>
+                </li>
                 {% if request.user.is_authenticated %}
                     <li class="nav-item">
                         <a id="panel" class="nav-link" href="{% url 'panel:home' %}">{% exp 'panel' %}</a>
                     </li>
                     <li class="nav-item">
-                        <a id="profile" class="nav-link" href="{% url 'users:profile' request.user.username %}">{% exp 'profile' %}</a>
+                        <a id="profile" class="nav-link"
+                           href="{% url 'users:profile' request.user.username %}">{% exp 'profile' %}</a>
                     </li>
                     <li class="nav-item">
                         <a id="logout" class="nav-link" href="{% url 'users:logout' %}">{% exp 'logout' %}</a>
+                    </li>
+                    <li class="nav-item">
+                        <form
+                                method="post"
+                                action="{% url 'users:delete' %}"
+                                onsubmit="return confirm('{% exp 'are_you_sure' %}')"
+                        >
+                            {% csrf_token %}
+                            <input type="submit" class="btn btn-danger" value="{% exp 'users.delete' %}">
+                        </form>
                     </li>
                 {% else %}
                     <li class="nav-item">
@@ -48,12 +66,6 @@
                         <a id="register" class="nav-link" href="{% url 'users:register' %}">{% exp 'register' %}</a>
                     </li>
                 {% endif %}
-                <li class="nav-item">
-                    <a id="homepage" class="nav-link" href="{% url 'pages:home' %}">{% exp 'home' %}</a>
-                </li>
-                <li class="nav-item">
-                    <a id="contact-us" class="nav-link" href="{% url 'pages:contact_us' %}">{% exp 'contact_us' %}</a>
-                </li>
             </ul>
         </div>
     </nav>
