--- a/src/templates/users/profile.html
+++ b/src/templates/users/profile.html
@@ -8,7 +8,9 @@
     <div class="row justify-content-center">
         <div class="col-md-6 p-5 mt-3 card">
             <h1 class="align-self-center">{% exp 'profile' %}</h1>
-            <div class="user-image align-self-center" style="background-image: url('{{ user.image.url }}');"></div>
+            {% if user.image %}
+                <div class="user-image align-self-center" style="background-image: url('{{ user.image.url }}');"></div>
+            {% endif %}
             <div class="row">
                 <div class="col-md-2">
                     <h6 class="text-secondary mt-4">{% exp 'user.first_name' %}</h6>
